--- a/app/globals.css
+++ b/app/globals.css
@@ -26,6 +26,20 @@ body {
     rgb(var(--background-start-rgb));
 }
 
+.content {
+  width: 334px;
+  height: 216px;
+  background: #f0f0f0;
+  border-radius: 3px;
+  overflow-y: auto;
+  padding: 0;
+}
+
+.wrapper {
+  transform: scale(0.5);
+  transform-origin: top left;
+}
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
