--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@100;200;300;400;500;600;700;800&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -33,6 +35,12 @@ body {
   border-radius: 3px;
   overflow-y: auto;
   padding: 0;
+}
+
+@layer base {
+  html {
+    font-family: "JetBrains Mono", monospace;
+  }
 }
 
 .wrapper {
